helm-mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  labels:
    app: mongo-express
spec:
  replicas: 1  # Deploy only one mongo-express pod for the admin interface
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express  # Use the latest mongo-express image
        ports:
        - containerPort: 8081  # Expose mongo-express UI on port 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector:
    app: mongo-express
  ports:
    - protocol: TCP
      port: 8081     # Service port for mongo-express UI
      targetPort: 8081  # Forwards to containerPort 8081
